--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Airspace
+title: EM Coaching
 permalink: /
 ---
 
@@ -18,6 +18,48 @@ permalink: /
   </div>
 </section>
 <!-- Wrapper Start -->
+<section id="intro">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7 col-sm-12">
+        <div class="block">
+          <div class="section-title">
+            <h2>About Me</h2>
+            <p>I am a magical woman and with me all your dreams can come true. It's true.</p>
+          </div>
+          <p>Olympic trials qualifier, blah blah blah, captain of Prado Racing Team, blah, DPT, blah blah, OCS, blah blah blah, cross country coach, blah blah, nurtition major, blah</p>
+        </div>
+      </div><!-- .col-md-7 close -->
+      <div class="col-md-5 col-sm-12">
+        <div class="block">
+          <img src="img/wrapper-img.jpg" alt="Img">
+        </div>
+      </div><!-- .col-md-5 close -->
+    </div>
+  </div>
+</section>
+
+<section id="feature">
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-6">
+      <!-- <h2>WE BELIEVE IN GREAT IDEAS</h2>
+      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <a href="#" class="btn btn-view-works">View Works</a> -->
+      <p>. </p>
+      <p>. </p>
+      <p>. </p>
+      <p>. </p>
+      <p>. </p>
+      <p>. </p>
+      <p>. </p>
+    </div>
+  </div>
+</div>
+</section>
+
 <section id="intro">
   <div class="container">
     <div class="row">
@@ -65,14 +107,14 @@ permalink: /
   <div class="container">
     <div class="row">
       <div class="section-title">
-        <h2>My Services</h2>
+        <h2>My Qualifications</h2>
         <p>Check out all these cool things I can do for you</p>
       </div>
     </div>
     <div class="row ">
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="icon ion-coffee"></i>
+          <i class="icon ion-woman"></i>
           <h4>Coaching</h4>
           <p> I can get you to run fast </p>
         </div>
