--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">MY NAME IS ERIN MENEFEE &#38; <br> I AM FAST AS FUCK</h1>
-          <p class="animated fadeInUp">I can help you be fast as fuck too.</p>
+          <h1 class="animated fadeInUp">MY NAME IS ERIN MENEFEE &#38; <br> I AM FAST AS FRICK</h1>
+          <p class="animated fadeInUp">I can help you be fast as frick too.</p>
         </div>
       </div>
     </div>
